+ added docs for built in variables support (wip) + added full support for variables for post

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dzek69/static-blog",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "src/index.js",
   "bin": {
     "static-blog": "dist/index.js"
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "commander": "^2.19.0",
+    "escape-html": "^1.0.3",
     "fs-extra": "^7.0.0",
     "highlight.js": "^9.13.1",
     "klaw": "^3.0.0",
