--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dzek69/static-blog",
-  "version": "1.0.2",
+  "version": "1.0.3-unreleased.1",
   "main": "src/index.js",
   "bin": {
     "static-blog": "dist/index.js"
