--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,23 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": [
-            "8"
-          ]
+    "presets": [
+        [
+            "@babel/env",
+            {
+                "targets": {
+                    "browsers": [
+                        "> 3%"
+                    ]
+                },
+                "useBuiltIns": "entry",
+                "corejs": 2
+            }
+        ]
+    ],
+    "env": {
+        "testing": {
+            "plugins": [
+                "rewire"
+            ]
         }
-      }
-    ]
-  ],
-  "env": {
-    "testing": {
-      "plugins": [
-        "rewire"
-      ]
     }
-  }
 }
