--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dzek69/static-blog",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "src/index.js",
   "bin": {
     "static-blog": "dist/cli.js"
@@ -20,22 +20,24 @@
   "dependencies": {
     "commander": "^2.19.0",
     "escape-html": "^1.0.3",
-    "fs-extra": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "highlight.js": "^9.13.1",
     "klaw": "^3.0.0",
     "markdown-it": "^8.4.2"
   },
   "devDependencies": {
-    "@dzek69/eslint-config-base": "^0.0.1",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "@dzek69/eslint-config-base": "^1.0.1",
+    "babel-plugin-rewire": "^1.2.0",
     "cross-env": "^5.2.0",
-    "docdash": "^1.0.0",
-    "eslint": "^5.6.1",
-    "fs-extra": "^7.0.0",
-    "jsdoc": "^3.5.5",
-    "mocha": "^4.0.1",
+    "docdash": "^1.1.1",
+    "eslint": "^6.2.2",
+    "jsdoc": "^3.6.3",
+    "mocha": "^6.2.0",
     "must": "^0.13.4"
   }
 }
