--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dzek69/static-blog",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "main": "src/index.js",
   "bin": {
     "static-blog": "dist/cli.js"
@@ -18,12 +18,15 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "bottom-line-utils": "^0.24.1",
     "commander": "^2.19.0",
     "escape-html": "^1.0.3",
     "fs-extra": "^7.0.1",
     "highlight.js": "^9.13.1",
     "klaw": "^3.0.0",
-    "markdown-it": "^8.4.2"
+    "markdown-it": "^8.4.2",
+    "rss": "^1.2.2",
+    "url-join": "4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
